Login api and add user completed
